# rust-image

./: .env  .gitignore  Cargo.toml  README.md  log4rs.yml
migrations/2020-03-31-154227_images/: up.sql
src/: db.rs  main.rs  models.rs  schema.rs
src/controllers/: image_controller.rs  mod.rs
src/services/: image_service.rs
src/utils/: http.rs  images_multipart.rs  macros.rs  mod.rs
static/: swagger.yml
static/js/: redoc.standalone.js
templates/: index.html.tera
