[package]
name = "rust-test"
version = "0.1.0"
authors = ["egsam98 <egsam98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rocket_codegen = "0.4.4"
diesel = { version = "1.3.0", features = ["sqlite", "r2d2"] }
dotenv = "0.15.0"
image = "0.23.2"
multipart = "0.16.1"
reqwest = "0.10.4"
tokio = { version = "0.2.4", features = ["full"] }

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]

[development]
address = "localhost"
port = 8000
log = "normal"